--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^8.2.8",
     "@angular/router": "~8.2.3",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "angularx-social-login": "^2.1.1",
     "arrive": "^2.4.1",
     "bootstrap": "^4.3.1",
     "bootstrap-material-design": "^4.1.2",
